--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@ spring.application.name=DermaCheck
 
 spring.jpa.database=postgresql
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/bddermacheck
 spring.datasource.username=postgres
-spring.datasource.password=4321
+spring.datasource.password=copitoxd2005@
 #spring.jackson.serialization.write-dates-as-timestamps=false
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
