--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://dpg-crkvigggph6c73an8itg-a.oregon-postgres.render.com/dbdermacheck
-spring.datasource.username=postgresql
-spring.datasource.password=gbUo2s9p50R01OhX5WXRWEYZbT6qdCEa
+spring.datasource.url=jdbc:postgresql://localhost/bddermacheck
+spring.datasource.username=postgres
+spring.datasource.password=a12C
 #spring.jackson.serialization.write-dates-as-timestamps=false
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
