Implementacion del metodo buscar para la US28

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/bddermacheck
 spring.datasource.username=postgres
-spring.datasource.password=a12C
+spring.datasource.password=2005
 #spring.jackson.serialization.write-dates-as-timestamps=false
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
