--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/bddermacheckimagen2
-spring.datasource.username=postgres
-spring.datasource.password=copitoxd2005@
+spring.datasource.url=jdbc:postgresql://dpg-cst67m0gph6c739bh5d0-a.oregon-postgres.render.com/dbdermacheck_hf6p
+spring.datasource.username=postgresql
+spring.datasource.password=Ilrxj3kRyatjNPBjoUE09phJdqcP7mt4
 
 media.location=mediafiles
 spring.servlet.multipart.max-file-size=5MB
